--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body{
 ul{
   margin: 0;
   list-style: none;
-  font-size: 1.5rem;
+  
 }
 
 h1{
@@ -28,7 +28,7 @@ h3{
   font-size: 2.2rem;
 }
 p{
-  font-size: 2rem;
+  font-size: 4rem;
   margin:1rem;
 }
 
@@ -40,25 +40,28 @@ section{
 
 
 .App{
+
   width: 100%;
   display: flex;
   justify-content: center;
-  background-image: url(./assets/bgMobile.png);
+  background-image: url(./assets/bgDesktop.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
-  align-items: center;  
+  align-items: center;
+
 }
 
 .weatherCard{
-  margin: 0 1.6rem;
+  margin-top: 8rem;
+  padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 4px solid black;
-  border-radius: 3rem;
-  padding: 0rem 1rem 1rem 1rem;
+  border: 2px solid black;
+  border-radius: 8rem;
+  padding: 3rem 1rem 1rem 3rem;
   text-align: center;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.3);
@@ -79,6 +82,7 @@ section{
 
 .weatherCard_details >li{
   text-transform: capitalize;
+  font-size: 2.5rem;
 }
 
 
@@ -116,11 +120,11 @@ section{
   }
 
   .weatherCard{
-    margin:0 25rem;
+    margin:8rem 26rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: rgba(red, green, blue, 0.1);
+    background-color: rgba(0, 0, 255, 0.5);
     color: white;
 
   }
@@ -149,19 +153,26 @@ section{
     width: 100%;
   }
 
-  .weatherCard_img{
-    width:100%;
-    
-    
+  
+.weatherCard_details >li{
+  text-transform:uppercase;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
 
-  }
+.btn_ChangeUnity{
+  cursor: pointer;
+  border: none;
+  padding: 0.7rem;
+  transition: 0.2s background
+}
 
-  .weatherCard_img img{
-    width: 20rem;
+.btn_ChangeUnity :hover{
+  background-color: rgba(red, green, blue, 0.4);
+  background: white;
+}
 
-
-  }
-
+  
 
 
   
